--- a/code/test.html
+++ b/code/test.html
@@ -32,75 +32,61 @@ body {
   }
   // 指定图表的配置项和数据
 
+var xAxisData = [];
+var data1 = [];
+var data2 = [];
+for (var i = 0; i < 100; i++) {
+  xAxisData.push('A' + i);
+  data1.push((Math.sin(i / 5) * (i / 5 - 10) + i / 6) * 5);
+  data2.push((Math.cos(i / 5) * (i / 5 - 10) + i / 6) * 5);
+}
 var option = {
+  legend: {
+    data: ['bar', 'bar2']
+  },
+  xAxis: {
+    data: xAxisData,
+    splitLine: {
+      show: false
+    }
+  },
+  yAxis: {},
   series: [
     {
-      type: 'scatter',
-      data: [[0, 0]],
-      symbolSize: 1,
-      label: {
-        normal: {
-          show: true,
-          formatter: [
-            'The whole box is a {term|Text Block}, with',
-            'red border and grey background.',
-            '{fragment1|A Text Fragment} {fragment2|Another Text Fragment}',
-            'Text fragments can be customized.'
-          ].join('\n'),
-          backgroundColor: '#eee',
-          // borderColor: '#333',
-          borderColor: 'rgb(199,86,83)',
-          borderWidth: 2,
-          borderRadius: 5,
-          padding: 10,
-          color: '#000',
-          fontSize: 14,
-          shadowBlur: 3,
-          shadowColor: '#888',
-          shadowOffsetX: 0,
-          shadowOffsetY: 3,
-          lineHeight: 30,
-          rich: {
-            term: {
-              fontSize: 18,
-              color: 'rgb(199,86,83)'
-            },
-            fragment1: {
-              backgroundColor: '#000',
-              color: 'yellow',
-              padding: 5
-            },
-            fragment2: {
-              backgroundColor: '#339911',
-              color: '#fff',
-              borderRadius: 15,
-              padding: 5
-            }
-          }
-        }
+      name: 'bar',
+      type: 'bar',
+      data: data1,
+      emphasis: {
+        focus: 'series'
+      },
+      animationDelay: function(idx) {
+        return idx * 10;
+      }
+    },
+    {
+      name: 'bar2',
+      type: 'bar',
+      data: data2,
+      emphasis: {
+        focus: 'series'
+      },
+      animationDelay: function(idx) {
+        return idx * 10 + 100;
       }
     }
   ],
-  xAxis: {
-    axisLabel: { show: false },
-    axisLine: { show: false },
-    splitLine: { show: false },
-    axisTick: { show: false },
-    min: -1,
-    max: 1
-  },
-  yAxis: {
-    axisLabel: { show: false },
-    axisLine: { show: false },
-    splitLine: { show: false },
-    axisTick: { show: false },
-    min: -1,
-    max: 1
+  animationEasing: 'elasticOut',
+  animationDelayUpdate: function(idx) {
+    return idx * 5;
   }
 };
-  
+
 
 myChart.setOption(option);
+
+
+
+//
 
 
 </script>
