--- a/code/test.html
+++ b/code/test.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset=utf-8>
-        <title>test</title>
-        <script src="https://unpkg.com/vue@3.2.31"></script>
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        <!-- 引入 echarts.js -->
-        <script src="https://cdn.staticfile.org/echarts/5.3.2/echarts.min.js"></script>
-        <script src="./jquery-3.6.0.js"></script>
+<meta charset=utf-8>
+<title>test</title>
+<script src="https://unpkg.com/vue@3.2.31"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<!-- 引入 echarts.js -->
+<script src="https://cdn.staticfile.org/echarts/5.3.2/echarts.min.js"></script>
+<script src="./jquery-3.6.0.js"></script>
 
-    </head>
+      </head>
 <style type="text/css">
-body {
-  margin: 30px;
+.parent {
+    display: flex;
+    width: 600px;
 }
-#main{
-  height: 800px;
+.item-1 {
+    width: 140px;
+    flex: 2 1 0%;
+    background-color: red;
+    height: 50px;
 }
-
+.item-2 {
+    width: 100px;
+    flex: 2 1 auto;
+    background-color: green;
+    height: 50px;
+}
+.item-3 {
+    flex: 1 1 200px;
+    background-color: blue;
+    height: 50px;
+}
 </style>
 
 <body>
-<button id="btn">Make a promise!</button>
-<div id="log"></div>
+<div class="parent">
+    <div class="item-1"></div>
+    <div class="item-2"></div>
+    <div class="item-3"></div> 
+</div>
+</body>
 
-<script type="text/javascript">
-
-
-</script>
-
-    </body>
 </html>
