--- a/code/test.html
+++ b/code/test.html
@@ -47,5 +47,34 @@
     <div class="right">右侧宽度固定</div>
   </div>
 </body>
+<script type="text/javascript">
+function foo(){
+  console.log(this.a);
+}
+
+var a=4;
+
+let obj1={
+  a:1,
+};
+let obj2={
+  a:2,
+};
+let obj3={
+  a:3,
+};
+
+foo();  // 4
+foo.call(obj1);  // 1
+foo.apply(obj2);  // 2
+foo.bind(obj3)();  // 3
+
+foo.apply(null);  // 4
+foo.apply(undefined);  // 4
+foo.bind(null)();  // 4
+foo.bind(undefined)();  // 4
+
+
+</script>
 
 </html>
