--- a/code/test.html
+++ b/code/test.html
@@ -48,32 +48,16 @@
   </div>
 </body>
 <script type="text/javascript">
-function foo(){
-  console.log(this.a);
+var ajax=new XMLHttpRequest();
+ajax.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+ajax.open("post","test.php");
+ajax.send("name=kop&age=66");
+
+ajax.onreadystatechange=function(){
+  if (ajax.readyState===4 && ajax.status===200) {
+    console.log(ajax.responseText)
+  }
 }
-
-var a=4;
-
-let obj1={
-  a:1,
-};
-let obj2={
-  a:2,
-};
-let obj3={
-  a:3,
-};
-
-foo();  // 4
-foo.call(obj1);  // 1
-foo.apply(obj2);  // 2
-foo.bind(obj3)();  // 3
-
-foo.apply(null);  // 4
-foo.apply(undefined);  // 4
-foo.bind(null)();  // 4
-foo.bind(undefined)();  // 4
-
 
 </script>
 
