--- a/code/test.html
+++ b/code/test.html
@@ -55,7 +55,7 @@ ajax.send("name=kop&age=66");
 
 ajax.onreadystatechange=function(){
   if (ajax.readyState===4 && ajax.status===200) {
-    console.log(ajax.responseText)
+    console.log(ajax.responseText);
   }
 }
 
