--- a/code/test.html
+++ b/code/test.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <meta charset=utf-8>
-    <title>test</title>
-    </head>
-<style type="text/css">
-.wrap {
-    width: 520px;
-    border: 1px solid black;
-    margin: 0 auto;
-    float: left;
-}
-.float{
-  width: 200px;
-  height: 200px;
-  background-color: green;
-  float: left;
-}
-.nofloat{
-  width: 300px;
-  height: 150px;
-  background-color: gray;
-}
-</style>
-
-<body>
-<div class="wrap">
-   <div class="float">浮动</div>
-   <div class="clear"></div>
-   <div class="nofloat">不想被浮动影响</div>
-</div>
-</body>
-<script type="text/javascript">
-
-
-</script>
-
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <style type="text/css">
+    #box1{
+      width: 400px;
+      height: 400px;
+      /* position: absolute; */
+      float: left;
+      background-color: red;
+    }
+    #box2{
+      width: 100px;
+      height: 100px;
+      background: green;
+      float:left;
+      /* position: absolute; */
+  </style>
+  <body>
+    <div id="box1"> 
+    </div>
+    <div id="box2">
+    </div>
+  </body>
 </html>
