--- a/code/test.html
+++ b/code/test.html
@@ -2,27 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>test</title>
   </head>
   <style type="text/css">
-    #box1{
-      width: 400px;
-      height: 400px;
-      /* position: absolute; */
-      float: left;
-      background-color: red;
-    }
-    #box2{
-      width: 100px;
-      height: 100px;
-      background: green;
-      float:left;
-      /* position: absolute; */
+  
   </style>
   <body>
-    <div id="box1"> 
-    </div>
-    <div id="box2">
-    </div>
+<script>
+  console.log('initial readyState:' + document.readyState);
+
+  document.addEventListener('readystatechange', () => console.log('readyState:' + document.readyState));
+  document.addEventListener('DOMContentLoaded', () => console.log('DOMContentLoaded'));
+
+  window.onload = () => console.log('window onload');
+</script>
+
+<iframe src="test2.html" onload="console.log('iframe onload')"></iframe>
+
+<img src="http://en.js.cx/clipart/train.gif" id="img">
+<script>
+  let img = document.querySelector("#img");
+  img.onload = () => console.log('img onload');
+</script>
+
   </body>
 </html>
