--- a/code/test.html
+++ b/code/test.html
@@ -1,36 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>test</title>
-  </head>
-  <style type="text/css">
-  .box {
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    background: red;
-    color: white;
-  }
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title></title>
+</head>
+<body>
 
-  #two {
-    position: relative;
-    top: 20px;
-    left: 20px;
-    background: blue;
-  }
-
-  </style>
-  <body>
-  <div class="box" id="one">One</div>
-  <div class="box" id="two">Two</div>
-  <div class="box" id="three">Three</div>
-  <div class="box" id="four">Four</div>
-
-
-<script>
-
-</script>
-
-  </body>
+</body>
 </html>
