--- a/code/test.html
+++ b/code/test.html
@@ -4,8 +4,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 </head>
 <body>
+  <div id="example">{{ message }}</div>
 
+  <script type="text/javascript">
+    const vm = new Vue({
+      el: "#example",
+      data: {
+        message: "old message",
+      }
+    });
+    vm.message = "new message";
+    console.log(vm.$el.textContent === "new message");
+    Vue.nextTIck(function() {
+      console.log(vm.$el.textContent === "new message");
+    });
+  </script>
 </body>
 </html>
