--- a/code/test.html
+++ b/code/test.html
@@ -5,7 +5,35 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 </head>
-<body>
+	<style type="text/css">
+		body {
+			margin: 0;
+		}
+		.parent {
+			width: 500px;
+			height: 500px;
+			margin: 0 auto;
+			background-color: #345678;
 
+			/* 将元素设置为 grid 布局 */
+			display: grid;
+		}
+		.child {
+			width: 300px;
+			height: 300px;
+			background-color: #84329f;
+
+			/* 通过 self 属性  */
+			align-self: center;
+			justify-self: center;
+			/* self 的缩写 */
+			place-self: center;
+		}
+	</style>
+
+<body>
+	<div class="parent">
+		<div class="child"></div>
+	</div>
 </body>
 </html>
