--- a/code/test.html
+++ b/code/test.html
@@ -9,31 +9,79 @@
 		body {
 			margin: 0;
 		}
-		.parent {
-			width: 500px;
-			height: 500px;
-			margin: 0 auto;
-			background-color: #345678;
-
-			/* 将元素设置为 grid 布局 */
-			display: grid;
+		body, html, .container {
+			height: 100vh;
+			box-sizing: border-box;
+			text-align: center;
+			overflow: hidden;
 		}
-		.child {
-			width: 300px;
-			height: 300px;
-			background-color: #84329f;
+		.container {
+			/* 开启 grid 布局 */
+			display: grid;
+			grid-template-rows: auto 1fr auto;
+		}
+		.header{
+			background-color: #987dff;
+		}
+		.content {
+			/* 中间部分的布局可以参考 两列、三列布局  */
+			display: grid;
+			grid-template-columns: auto 1fr;
+			background-color: #feeeee;
+		}
+		.left {
+			width: 240px;
+			background-color: #123456;
+			font-size: 80px;
+			line-height: calc(100vh - 200px);
+		}
+		.right {
+			background-color: #123123;
+			font-size: 60px;
 
-			/* 通过 self 属性  */
-			align-self: center;
-			justify-self: center;
-			/* self 的缩写 */
-			place-self: center;
+			/* 如果超出出现滚动条 */
+			overflow: auto;
+			height: 100%;
+		}
+		.right-in {
+			/* 假设容器内有500px的元素 */
+			height: 500px;
+		}
+		.footer {
+			background-color: #321456;
+		}
+		.header, .footer {
+			height: 100px;
+			line-height: 100px;
+			text-align: center;
+			font-size: 40px;
 		}
 	</style>
 
 <body>
-	<div class="parent">
-		<div class="child"></div>
+	<div class="container">
+		<div class="header">header</div>
+		<div class="content">
+			<div class="left">导航</div>
+			<div class="right">
+				<div class="right-in">
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+				</div>
+			</div>
+		</div>
+		<div class="footer">footer</div>
 	</div>
 </body>
 </html>
