--- a/code/promise.html
+++ b/code/promise.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>自定义Promise</title>
 </head>
-<body>
+<body onload="closeit()">
 
 <script type="text/javascript">
-  
+
 // 自定义 Promise
 (function (window) {
 
