--- a/code/test.html
+++ b/code/test.html
@@ -11,17 +11,14 @@
 
 <body>
 
-<li>
-  <label>
-    <input type="checkbox" />
-    <span>xxxx</span>
-  </label>
-</li>
+   <a href="test.html" onclick="openwin()">open</a>
 
 
 </body>
 <script type="text/javascript">
-
+ function openwin(){
+     window.open("promise.html","","width=200,height=200,top=500,left=500") 
+ } 
 </script>
 
 </html>
