--- a/code/test.html
+++ b/code/test.html
@@ -8,58 +8,17 @@
 	
 
 <body>
-<div class="box box1"> 1px 边框，作为对比 </div>
-<div class="box box2"> 方案1: 直接设置0.5px边框</div>
-<div class="box box3"> 方案2: 设置0.5px阴影扩散半径 </div>
-<div class="box box4"> 方案3: 使用背景渐变实现1px背景的一半</div>
-<div class="box box5"> 方案4: 伪元素2倍尺寸1px边框scale缩小一半</div>
-<style>
-  .box {
-  width: 200px;
-  height: 50px;
-  border-radius: 10px;
-  margin-top: 10px;
-}
-.box1 {
-  border: 1px solid #000;
-}
-.box2 {
-  border: 0.5px solid #000;
-}
-.box3 {
-  box-shadow: 0px 0px 0px 0.5px #000;
-}
-.box4 {
-  position: relative;
-}
-.box4::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 1px;
-  background-image: linear-gradient(0deg, #000 50%, transparent 50%);
-}
 
-.box5 {
-  position: relative;
-}
-.box5::after {
-  position: absolute;
-  bottom: 0;
-  z-index: -1;
-  width: 200%;
-  height: 200%;
-  content: "";
-  display: block;
-  border: 1px solid #000;
-  border-radius: 10px;
-  transform: scale(0.5);
-  transform-origin: left bottom;
-}
-</style>
 </body>
+<script type="text/javascript">
+const normalObj = {};  //create a normal object
+const nullProtoObj = Object.create(null);  // create an object with "null" prototype
 
+console.log("normalObj is: " + normalObj); // shows "normalObj is: [object Object]"
+// console.log("nullProtoObj is: " + nullProtoObj); // throws error: Cannot convert object to primitive value
+
+console.log(normalObj.valueOf());  //   {}
+console.log(nullProtoObj.valueOf);  //  undefined
+</script>
 
 </html>
