--- a/code/test.html
+++ b/code/test.html
@@ -8,20 +8,36 @@
 <body>
 <script type="text/javascript">
 
-function foo(){
-    console.log(this.a);
+function Foo() {
+    getName = function() {
+        console.log("1")
+    }
+    return this;
+}
+Foo.getName = function() {
+    console.log("2");
+}
+Foo.prototype.getName = function() {
+    console.log("3");
 }
 
-var a=2;
+var getName = function() {
+    console.log("4")
+}
 
-foo();  // 2
+function getName() {
+    console.log("5");
+}
 
-var obj={
-    a:3,
-    foo:foo
-};
+Foo.getName();  // 2
 
-obj.foo();  // 3
+getName();  // 4
+
+new Foo.getName();  // 2
+
+new Foo().getName();  // 3
+
+new new Foo().getName();  // 3
 
 </script>
 </body>
