--- a/code/test.html
+++ b/code/test.html
@@ -4,38 +4,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
+    <style type="text/css">
+      
+    .div-box1{
+      display: flex;
+      padding: 10px;
+      border: 1px solid #000;
+    }
+    .div1{
+      flex: 1;
+      border: 1px solid #00f;
+    }
+    .div2{
+      flex: 1;
+      border: 1px solid #f00;
+    }
+    </style>
 </head>
 <body>
-    <div id="count"></div>
-
-<script type="text/javascript">
-
-window.onload=function(){
-    countDown();
-}
-function addZero(i){
-  return i < 10 ? "0"+i : i+"";
-}
-  
-function countDown(){
-  let nowtime=new Date();
-  let endtime=new Date("2022/08/10,16:00:00");
-  let lefttime=parseInt((endtime.getTime()-nowtime.getTime())/1000);
-
-  if (lefttime <= 0) {
-    document.querySelector("#count").innerHTML="活动已结束";
-    return;
-  }
-
-  let d=addZero(parseInt(lefttime/(24*60*60)));
-  let h=addZero(parseInt(lefttime/(60*60)%24));
-  let m=addZero(parseInt(lefttime/60%60));
-  let s=addZero(parseInt(lefttime%60));
-
-  document.querySelector("#count").innerHTML=`活动倒计时  ${d}天 ${h} 时 ${m} 分 ${s} 秒`;
-  setTimeout(countDown,1000);
-}
-
-</script>
+    <div class="div-box1">
+      <div class="div1"><p>第一个盒子</p><p>第一个盒子</p><p>第一个盒子</p><p>第一个盒子</p><p>第一个盒子</p></div>
+      <div class="div2">第二个盒子</div>
+    </div>
 </body>
 </html>
