--- a/code/test.html
+++ b/code/test.html
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <meta charset="utf-8" />
+    <title>测试</title>
     <style type="text/css">
-      
-    .div-box1{
-      display: flex;
-      padding: 10px;
-      border: 1px solid #000;
-    }
-    .div1{
-      flex: 1;
-      border: 1px solid #00f;
-    }
-    .div2{
-      flex: 1;
-      border: 1px solid #f00;
-    }
+        div {
+             width:0px;
+             height:0px;
+             margin:100px auto;
+             border-left:30px solid transparent; 
+             border-right:30px solid transparent; 
+             border-bottom:40px solid #A962CE; /*--三角形的高--*/
+        }
     </style>
 </head>
 <body>
-    <div class="div-box1">
-      <div class="div1"><p>第一个盒子</p><p>第一个盒子</p><p>第一个盒子</p><p>第一个盒子</p><p>第一个盒子</p></div>
-      <div class="div2">第二个盒子</div>
-    </div>
+    <div></div>
 </body>
 </html>
